--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,9 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+		<div>
+			<p>Je m'appelle ismael</p>
+		</div>
 		
 	
 </body></html>
