ajout des titres

--- a/hello.html
+++ b/hello.html
@@ -16,9 +16,17 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+		<!-- Description -->
 		<div>
+			<h1>Ma description</h1>
 			<p>Je m'appelle ismael</p>
 		</div>
+		<!-- Récompense -->
+		<div>
+			<h1>Mes récompenses</h1>
+			<p>Enconstruction</p>
+		</div>
+
 		
 	
 </body></html>
