#2 ajout medaille bronze

--- a/hello.html
+++ b/hello.html
@@ -24,7 +24,7 @@
 		<!-- Récompense -->
 		<div>
 			<h1>Mes récompenses</h1>
-			<p>Enconstruction</p>
+			<p> <img src="images\medal_bronze.png"> </p>
 		</div>
                  <!-- Mon gist-->
 		<div>
